# nano-vllm-qwen3.6

./: .gitignore  AGENTS.md  OPEN_SOURCE_CHECKLIST.md  README.md  bench_mtp_draft_sweep.py  bench_qwen35_fixed.py  pyproject.toml  run_mtp_fast_decode.py  run_text_qwen35.py  run_text_qwen35_v2.py  run_text_qwen36_fp8.py  test_mtp1_spec_decode.py  test_mtp1_verify.py  test_mtp_forward.py  test_mtp_spec_decode.py  test_state_rollback.py
nanovllm/: config.py
nanovllm/engine/: llm_engine.py  model_runner.py  sequence.py
nanovllm/layers/: embed_head.py  gated_delta_net.py  linear.py  rotary_embedding.py  sampler.py
nanovllm/models/: qwen3_5.py  qwen3_mtp.py
nanovllm/utils/: loader.py  quant.py
